@@ -53,7 +53,11 @@ New in v0.7.02 (2015/02/??)
 * Fixes for 2to3 issues
 * Fix spelling error in manpage, bug 1419314.
 * Fix _librsyncmodule.c compilation, bug 1416344, thanks to Kari Hautio.
-* Really fix bug 1416344 based on comment #5 by Roman Tereshonkov
+* Really fix bug 1416344 based on comment #5 by Roman Tereshonkov.
+* Fix for --pydevd debug environment and location under Eclipse.
+* Fix for bug where scp was actually working as scp and not working with
+  rsync.net because of using extraneous test command in restricted shell.
+  Was trying "test -d 'foo' || mkdir -p 'foo'", now only "mkdir -p foo".
 
 
 New in v0.7.01 (2015/01/11)
